<?xml version="1.0"?>
<package format="2">
  <name>sample_nodelet</name>
  <version>0.1.0</version>
  <description>Simple example of ROS nodelet</description>

  <maintainer email="cryborg21@gmail.com">cryborg21</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/cryborg21/sample_nodelet</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/sample_nodelet.xml" />
  </export>
</package>
